<resources>
    <string name="app_name">pathlyApp</string>
    <string name="pathly">Pathly</string>
    <string name="entr_subtitle">Расширь свои горизонты, гуляя по новым маршрутам</string>
    <string name="build_routes">Строить маршруты</string>
    <string name="main_page">Главное меню</string>
    <string name="music"><![CDATA[Музыка & Подкасты]]></string>
    <string name="places">Места</string>
    <string name="more">Подробнее</string>
    <string name="all">Все</string>
    <string name="nature">Природа</string>
    <string name="gastronomy">Гастрономия</string>
    <string name="filters">Фильтры</string>
    <string name="recommendations">Рекомендованные подборки</string>
    <string name="entrance">Вход</string>
    <string name="or">или</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="forget_password">Забыл пароль?</string>
    <string name="enter">Войти</string>
    <string name="not_registered_then_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="send_email">Мы отправим вам письмо для возможности изменить</string>
    <string name="send">Отправить</string>
    <string name="male">М</string>
    <string name="female">Ж</string>
    <string name="name">Имя</string>
    <string name="nickname">Никнейм</string>
    <string name="date_birth">Дата рождения</string>
    <string name="registration">Регистрация</string>
    <string name="profile_name">Петр Петрович</string>
    <string name="profile_email">petr12345@yandex.ru</string>
    <string name="routes">Маршрутов</string>
    <string name="num">6 шт</string>
    <string name="num_1">6</string>
    <string name="profile_places">Мест</string>
    <string name="num_2">15</string>
    <string name="step_per_day">Шагов/день</string>
    <string name="num_3">11 300</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="QA"><![CDATA[Q&A]]></string>
    <string name="activity">Активность</string>
    <string name="data">сегодня</string>
    <string name="History">История</string>
    <string name="interesting_facts">Интересные факты</string>
</resources>