<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_entrance">


    <TextView
        android:id="@+id/entr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pathly"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/nexa_script"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/entr_subtitle"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:text="@string/entr_subtitle"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_semibold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/entr_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:id="@+id/route_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_route_icon"
        app:layout_constraintTop_toBottomOf="@id/entr_subtitle"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/entr_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/build_routes"
        android:fontFamily="@font/helios_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:padding="16dp"
        android:background="@drawable/ic_btn_rounded"
        app:layout_constraintTop_toBottomOf="@id/route_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:drawableEnd="@drawable/ic_arrow_right"
        />


</androidx.constraintlayout.widget.ConstraintLayout>