<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <include
        layout="@layout/guidelines"/>

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"/>

    <LinearLayout
        android:id="@+id/top_bar_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="-15dp"

        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <TextView
            android:id="@+id/tv_top_bar_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="09.01.2025 г."
            android:textSize="16sp"
            android:fontFamily="@font/gilroy_medium"
            android:textColor="@color/dark_gray"/>

        <ImageView
            android:id="@+id/ic_top_bar_spot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pin"/>

        <TextView
            android:id="@+id/tv_top_bar_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Москва"
            android:fontFamily="@font/gilroy_medium"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/top_bar_time"
        app:layout_constraintBottom_toTopOf="@id/nav_bottom"
        app:layout_constraintStart_toStartOf="@id/guideline_begin"
        app:layout_constraintEnd_toEndOf="@id/guideline_end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="16dp"
            android:paddingHorizontal="0dp">

            <LinearLayout
                android:id="@+id/group_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:text="@string/places"
                    android:textSize="20sp"
                    android:fontFamily="@font/helios_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/more"
                    android:textSize="14sp"
                    android:fontFamily="@font/gilroy_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/selector_places_filter"/>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:scrollbars="none"
                android:fillViewport="true">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="false"
                    app:chipSpacing="8dp"
                    app:selectionRequired="false">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        style="@style/FilterChipStyle.Selected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all"
                        android:checked="true"
                        android:checkable="true"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_nature"
                        style="@style/FilterChipStyle.Default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nature"
                        android:checkable="true"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_food"
                        style="@style/FilterChipStyle.Default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gastronomy"
                        android:checkable="true"/>



        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                app:fastScrollEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/card_place"/>

            <LinearLayout
                android:id="@+id/hp_group_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                >
                <include
                    android:layout_height="90dp"
                    android:layout_width="170dp"
                    layout="@layout/card_music"
                    />
                <include
                    android:layout_height="90dp"
                    android:layout_width="170dp"
                    layout="@layout/card_interesting_facts"
                    android:layout_marginStart="24dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/group_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:text="@string/recommendations"
                    android:textSize="20sp"
                    android:fontFamily="@font/helios_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:text="@string/filters"
                    android:textSize="14sp"
                    android:fontFamily="@font/gilroy_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/selector_places_filter"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                app:fastScrollEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/nav_bottom"
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>